tests/parser-test-files/bad-files/define-type.5.error
error: Malformed type definition
  --> test:4:13
   |
 4 |  (define-type "T")
   |               ^^^ expected symbol
